--- a/20170221_Form_post.md
+++ b/20170221_Form_post.md
@@ -2,12 +2,13 @@
 
 When building websites, chances are that you will need to gather data from your users.
 The most common way to gather data is via a form. But after gathering the data, there are two ways to submit it from the browser to your server:
-1. Using a HTML form
-2. Using an Ajax call
+
+ 1. Using a HTML form
+ 2. Using an Ajax call
 
 Today we will see the differences and how we can implement it.
 
-1. Submit data using a form
+## 1. Submit data using a form
 
 Before hand, I have created a simple server which has a single endpoint accepting a POST.
 
@@ -46,7 +47,7 @@ _To prevent  going to a page showing the result of the POST, we can implement th
 
 In the era of SPAs, lot of us do everything via JS and Ajax in particular to submit data. Let's see how we can achieve that in JS.
 
-2. Submit data using Ajax
+## 2. Submit data using Ajax
 
 Submitting data by Ajax allows to submit a json object which we can handle on our server.
 To do that we can intercept the submission when the button is pressed and gather all data on submit and the Json object by specifying the content type as Application/json.
@@ -69,6 +70,6 @@ And that's it, those are the main ways we can submit data from the client to the
 
 # Conclusion
 
-Today we saw how we could submit data from the client to the server via a Http POST. We saw how we could do it using classic HTML forms then we learnt how we could do it straight from JavaScript with Ajax. We also learnt the different content type and how to use them. I hope this post was helpful! As usual if you have any comments leave it here or hit me on Twitter [@Kimserey_Lam](). See you next time!
+Today we saw how we could submit data from the client to the server via a Http POST. We saw how we could do it using classic HTML forms then we learnt how we could do it straight from JavaScript with Ajax. We also learnt the different content type and how to use them. I hope this post was helpful! As usual if you have any comments leave it here or hit me on Twitter [@Kimserey_Lam](https://twitter.com/Kimserey_Lam). See you next time!
 
 # Other post you will like!
