--- a/20170221_Form_post.md
+++ b/20170221_Form_post.md
@@ -76,7 +76,7 @@ Content-Type: image/png
 
 And from the server side, we can see that we receive a file in the context request.
 
-![file_request]()
+![file_request](https://raw.githubusercontent.com/Kimserey/BlogArchive/master/img/20170221_form_post/file_req.png)
 
 _To prevent  going to a page showing the result of the POST, we can implement the POST-REDIRECT-GET logic (PRG)._
 
