--- a/20170221_Form_post.md
+++ b/20170221_Form_post.md
@@ -41,7 +41,8 @@ Form Data
 my-data:test
 ```
 
-Url encoded means that the content of the file has been _encoded in the url_ and posted to the action specified. This is the default behavior.
+Url encoded means that the content of the form has been _encoded in the url_ and posted to the action specified. 
+This is the default behavior of a form submit.
 
 But if we need to send a file, we will not be able to url encode the file, we need to send it as `form-data`.
 Let's start by adding a file input:
@@ -54,7 +55,7 @@ Let's start by adding a file input:
 </form>
 ```
 
-And to tell the browser to submit as form-data we need to specify the encoding type `enctype="multipart/form-data"`.
+To tell the browser to submit as form-data we need to specify the encoding type `enctype="multipart/form-data"`.
 Now when we submit we can see that the data has been sent as multipart form data.
 And __the content type also include__ `boundary=XXX` which __lets the server know the boundary delimiting the data in the body of the request__.
 
@@ -78,14 +79,14 @@ And from the server side, we can see that we receive a file in the context reque
 
 ![file_request](https://raw.githubusercontent.com/Kimserey/BlogArchive/master/img/20170221_form_post/file_req.png)
 
-_To prevent  going to a page showing the result of the POST, we can implement the POST-REDIRECT-GET logic (PRG)._
+_To prevent double submit (due to the page POST'ing the request being loaded), we can implement the POST/REDIRECT/GET logic (PRG)._
 
 In the era of SPAs, lot of websites now do everything via JavaScript and Ajax in particular to submit data. Let's see how we can achieve that in JS.
 
 ## 2. Submit data using Ajax
 
-Submitting data by Ajax allows to submit a json object which we can handle on our server.
-To do that we can intercept the submission when the button is pressed and gather all data on submit and the Json object by specifying the content type as Application/json.
+Submitting data by Ajax allows to submit a json object which can be easily deserialized on our server.
+To do that we can intercept the submission when the button is pressed and gather all data on submit and serialize the content of the form.
 
 ```
 <form id="form">
@@ -122,9 +123,9 @@ Content-Type:application/json
 `serializeArray` is quite clever as it selects input with a `name` and the `value` assigned and place it into a serializable key value list.
 [https://api.jquery.com/serializeArray/](https://api.jquery.com/serializeArray/)
 
-If we need to submit a file here, we will not be able to use Json and same as previously, we wil need to use form data.
+If we need to submit a file here, we will not be able to use `Json` and same as previously, we will need to use `form data`.
 
-To do that we can build the form data using FormData and append.
+To do that we can build the form data using `FormData` and `.append()`.
 
 ```
 <form id="form2">
@@ -157,7 +158,7 @@ $("#ajaxFormFormData").click(function (e) {
 });
 ```
 
-Here we append all the data and the files to the form data. Next we pass the form data to the Ajax post and __set the processData to false__ and __contentType to false__ - setting contentType to false will have the multipart content type and boundary automatically set for us.
+Here we append all the data and the files to the form data. Next we pass the form data to the Ajax post and __set the__ `processData` __to false__ and `contentType` __to false__ - setting `contentType` to false will have the multipart content type and boundary automatically set for us.
 
 Now when we submit the form, the content plus the files will be sent as `multipart/form-data`.
 
