--- a/20170309_tip_gimp.md
+++ b/20170309_tip_gimp.md
@@ -1,25 +1,27 @@
-Tips on setting up Gimp environment
+# Tips on setting up Gimp environment
 
 Every now and then I discover features on Gimp that I didn't know existed. It is always a good surprise to find a feature which simplify your work! So today I will show four features that I recently discovered:
 
+```
 1. Extra view
 2. Color palette
 3. Floating layer
 4. Animated GIF
+```
 
-1. Extra view
+## 1. Extra view
 
 Gimp allows us to display multiple time the same file with different zoom and positions. This is very useful as we can use as a preview view.
 
-2. Palette to choose colors
+## 2. Palette to choose colors
 
 To choose between colours another easy way is to use Palettes. Palettes are accessible on the tab, it can be used to set the colors picker. For example if we choose the Gold palette, we will have some shades of brown which can be used to colour objects and make them gold'ish.
 
-3. Floating layer
+## 3. Floating layer
 
 To move a selection, we can use the select tool then CMD + SHIFT + F to place the selection into a floating layer. We can then move the selection and when we need to fix the selection we can use anchor selection.
 
-4. Animated GIF
+## 4. Animated GIF
 
 It is possible to create GIF with Gimp by creating multiple layers. Each layers will represent a frame. In order to visualize the GIF we can use the animator.
 Gimp also follow a name convention to define the time for each frame, it is done by specifying the time in parentheses in millisecond for example if the layer name is `main character 0 (1000ms)`, the frame will be displayed for 1 second. Next if we want to export the GIF, we can do so by using Export as and select GIF and Animated.
