--- a/20170309_tip_gimp.md
+++ b/20170309_tip_gimp.md
@@ -19,7 +19,7 @@ To choose between colours another easy way is to use Palettes. Palettes are acce
 
 ## 3. Floating layer
 
-To move a selection, we can use the select tool then CMD + SHIFT + F to place the selection into a floating layer. We can then move the selection and when we need to fix the selection we can use anchor selection.
+To move a selection, we can use the select tool then `CTRL + SHIFT + F` to place the selection into a floating layer. We can then move the selection and when we need to fix the selection we can use anchor selection.
 
 ## 4. Animated GIF
 
