--- a/20170309_tip_gimp.md
+++ b/20170309_tip_gimp.md
@@ -14,7 +14,7 @@ Every now and then I discover features on Gimp that I didn't know existed. It is
 Gimp allows us to display multiple time the same file with different zoom and positions. This is very useful as we can use as a preview view.
 You can open a new view by going `View > New View`.
 
-![](new view)
+![https://raw.githubusercontent.com/Kimserey/BlogArchive/master/img/20170308_tip_gimp/1_new_view.png](new view)
 
 ## 2. Palette to choose colors
 
@@ -23,18 +23,18 @@ We can also create our own palettes and those are saved into Gimp settings.
 
 For example here I have created my own `My example` palette:
 
-![](palette)
+![https://raw.githubusercontent.com/Kimserey/BlogArchive/master/img/20170308_tip_gimp/2_custom_palette.png](palette)
 
 And when selected, the color picker is restricted to my color choices:
 
-![](choices)
+![https://raw.githubusercontent.com/Kimserey/BlogArchive/master/img/20170308_tip_gimp/2_picker.png](choices)
 
 ## 3. Floating layer
 
 To move a selection, we can use the select tool then `CTRL + SHIFT + F` to place the selection into a floating layer. We can then move the selection and when we need to fix the selection we can use anchor selection.
 
-![](floating)
-![](anchor)
+![https://raw.githubusercontent.com/Kimserey/BlogArchive/master/img/20170308_tip_gimp/3_floating_layer.png](floating)
+![https://raw.githubusercontent.com/Kimserey/BlogArchive/master/img/20170308_tip_gimp/3_anchor.png](anchor)
 
 ## 4. Animated GIF
 
@@ -42,11 +42,11 @@ It is possible to create GIF with Gimp by creating multiple layers. Each layers 
 Gimp also follow a name convention to define the time for each frame, it is done by specifying the time in parentheses in millisecond for example if the layer name is `main character 0 (1000ms)`, the frame will be displayed for 1 second. Next if we want to export the GIF, we can do so by using Export as and select GIF and Animated.
 We can also set the drop-down to frame only in order to only render one frame each time.
 
-![](example)
+![https://raw.githubusercontent.com/Kimserey/BlogArchive/master/img/20170308_tip_gimp/4_gif.png](example)
 
 Here is the result:
 
-![](gif)
+![https://raw.githubusercontent.com/Kimserey/BlogArchive/master/img/20170308_tip_gimp/4_animated.gif](gif)
 
 # Conclusion
 
