--- a/20170329_flexbox.md
+++ b/20170329_flexbox.md
@@ -1,1 +1,14 @@
-# Responsive navbar with Flexbox and Bootstrap v4 in SASS
+# Create a navbar responsive display with flexbox and boostrap v4
+
+Last week we saw how to setup vscode to compile sass. Today we will see how we can compile bootstrap sass files together with our own sass and define a grid layout for the collapsed nav in smaller screen using flexbox.
+
+1. Flexbox
+2. Bootstrap sass media directive
+3. Use it
+
+1. Flexbox
+
+Flexbox is a display which allows us to control how elements will be rendered in a responsive layout.
+We can control precisely how the space available is occupied by elements together with the order of appearance.
+
+Display: flex
