--- a/20170329_flexbox.md
+++ b/20170329_flexbox.md
@@ -2,15 +2,34 @@
 
 Last week we saw how to setup vscode to compile sass. Today we will see how we can compile bootstrap sass files together with our own sass and define a grid layout for the collapsed nav in smaller screen using flexbox.
 
-```
 1. Flexbox
 2. Bootstrap sass media directive
 3. Use it
+
+1. Flexbox
+
+Flexbox allows to control how elements are rendered in a responsive layout.
+We can control precisely how the space available is occupied by elements together with the order of appearance.
+There's few settings for it which are applied to the container and the elements within the container.
+
+Refer to MDN documentation if you want more explanation [https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Flexible_Box_Layout/Using_CSS_flexible_boxes](https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Flexible_Box_Layout/Using_CSS_flexible_boxes).
+
+In this tutorial, I will only use the following css properties:
+
+__For the container:__
+
+```
+display: flex;
+flex-flow: row wrap;
 ```
 
-## 1. Flexbox
+`display:flex` is used to specify that the display is a `flexbox` and the flexbox css properties apply to it.
+`flex-flow` is a shorthand for `flex-direction flex-wrap`. `row` means that the direction is row, it could also be column/row-reverse/column-reverse. `wrap` means that the `flex-wrap` is `wrap`, the elements break into multiple lines, it can also be nowrap/wrap-reverse.
 
-Flexbox is a display which allows us to control how elements will be rendered in a responsive layout.
-We can control precisely how the space available is occupied by elements together with the order of appearance.
+__And for the items:__
 
-Display: flex
+```
+flex: 1 50%;
+```
+
+`flex` is a shorthand for `flex-grow flex-shrink flex-basis`. `flex-grow` defines how the element occupies the space available compared to other elements. In this example, `1 50%` means that `flex-grow` is 1 and `flex-basis` 50%.
