--- a/20170329_flexbox.md
+++ b/20170329_flexbox.md
@@ -2,11 +2,13 @@
 
 Last week we saw how to setup vscode to compile sass. Today we will see how we can compile bootstrap sass files together with our own sass and define a grid layout for the collapsed nav in smaller screen using flexbox.
 
-1. Flexbox
-2. Bootstrap sass media directive
-3. Use it
+ 1. Flexbox
+ 2. Bootstrap sass media directive
+ 3. Build the nav style
 
-1. Flexbox
+ ![preview](https://raw.githubusercontent.com/Kimserey/BlogArchive/master/img/20170329_flexbox/flexbox.gif)
+
+## 1. Flexbox
 
 Flexbox allows to control how elements are rendered in a responsive layout.
 We can control precisely how the space available is occupied by elements together with the order of appearance.
@@ -32,4 +34,10 @@ __And for the items:__
 flex: 1 50%;
 ```
 
-`flex` is a shorthand for `flex-grow flex-shrink flex-basis`. `flex-grow` defines how the element occupies the space available compared to other elements. In this example, `1 50%` means that `flex-grow` is 1 and `flex-basis` 50%.
+`flex` is a shorthand for `flex-grow flex-basis`. `flex-grow` defines how the element occupies the space available compared to other elements and `flex-basis` is the initial width of the element. In this example, `1 50%` means that `flex-grow` is 1 and `flex-basis` 50%.
+
+Now that we know how to use flexboxes, we can 
+
+## 2. Bootstrap sass media directive
+
+In this example we will be using Bootstrap v4 nav and directives.
