--- a/20170329_flexbox.md
+++ b/20170329_flexbox.md
@@ -40,4 +40,107 @@ Now that we know how to use flexboxes, we can
 
 ## 2. Bootstrap sass media directive
 
-In this example we will be using Bootstrap v4 nav and directives.
+`sm/md/lg` are commonly used in Bootstrap for responsive design. The navbar for example has a `navbar-toggleable-X` where `X` is one of the size breakpoint. It defines at which breakpoint does the nav become toggleable.
+To leverage those breakpoints, we can directly use Bootstrap sass directives in our own sass. To do that we first start by getting the source code of boostrap v4:
+
+```
+bower install bootstrap#v4.0.0-alpha.6
+```
+
+Now that we have boostrap sass source files, we will be able to use the media query breakpoints via the sass mixins like so:
+
+```
+.my-class {
+    /* default style up to sm */
+    @include media-breakpoint-up(sm) {
+        /* style from sm */
+    }
+}
+```
+
+Which will translate to the following media query:
+
+```
+.my-class {
+    /* default style up to sm */
+}
+@media (min-width: 576px) { 
+    .my-class {
+        /* style from sm */
+    }
+}
+```
+
+## 3. Build the responsive navbar
+
+Now that we know how flexboxes work and how to use Bootstrap mixins, we can build the responsive navbar we saw in the preview.
+
+We start by the html:
+
+```
+<nav class="navbar navbar-toggleable-sm navbar-light bg-faded fixedsticky fixedtop">
+    <button class="navbar-toggler navbar-toggler-left" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <a href="#" class="hidden-md-up ml-auto"><img src="content/icon.png" class="brand-img" /></a>
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <div class="navbar-nav mr-auto">
+            <div class="navbar-nav-button">
+                <img src="content/job_sign.png" class="brand-img" />
+                <br/>
+                <a class="" href="#">Jobs</a>
+            </div>
+            <div class="navbar-nav-button">
+                <img src="content/office_building.png" class="brand-img" />
+                <br/>
+                <a class="" href="#">Companies</a>
+            </div>
+            <div class="navbar-nav-button">
+                <img src="content/job_seeker_portrait.png" class="brand-img" />
+                <br/>
+                <a class="" href="#">User profile</a>
+            </div>
+            <div class="navbar-nav-button">
+                <img src="content/star.png" class="brand-img" />
+                <br/>
+                <a class="" href="#">Saved</a>
+            </div>
+        </div>
+    </div>
+</nav>
+```
+
+Notice that we have a brand icon which gets hidden when higher than md thanks to `hidden-md-up`.
+For the nav menu, we set it as `navbar-toggleable-sm` meaning it toggle on small screen `sm`.
+`navbar-nav-button` is a custom style which we are going to define now:
+
+```
+.navbar-nav {
+    flex-flow: row wrap;
+    width: 100%;
+    max-width: 400px;
+    margin: auto;
+
+    .navbar-nav-button {
+        flex: 1 50%;
+        text-align: center;
+        padding: .5em;
+
+        @include media-breakpoint-up(sm) {
+            flex: 1 auto;
+            padding: 0;
+        }
+    }
+
+    @include media-breakpoint-up(sm) {
+        max-width: 600px;
+        margin: 0;
+    }
+}
+```
+
+`navbar-nav` is the css class styling the toggleable menu. By default the flow is `row` and when toggled becomes `column`.
+In our example, we have same size icon buttons therefore having all the buttons in a column could be a waste of space and having those in a 2x2 grid would be better. In order to do that we force the flow to remain `row` 
+Bootstrap nav is by default `display:flex`, therefore we do not need to specify it.
