--- a/20170329_flexbox.md
+++ b/20170329_flexbox.md
@@ -141,6 +141,33 @@ For the nav menu, we set it as `navbar-toggleable-sm` meaning it toggle on small
 }
 ```
 
-`navbar-nav` is the css class styling the toggleable menu. By default the flow is `row` and when toggled becomes `column`.
-In our example, we have same size icon buttons therefore having all the buttons in a column could be a waste of space and having those in a 2x2 grid would be better. In order to do that we force the flow to remain `row` 
-Bootstrap nav is by default `display:flex`, therefore we do not need to specify it.
+`navbar-nav` is the css class styling for the toggleable menu. By default the direction is `row` and when toggled becomes `column`.
+In our example, we have same size icons buttons therefore having all the buttons in a column would be a waste of space. Having those in a 2x2 grid would be better. 
+In order to do that we force the flow to remain `row` accross all screen sizes and order the content to break line when space is not available by setting the flex-wrap to `wrap`,
+
+```
+flex-flow: row wrap;
+```
+
+And specify that each item takes 50% of the space by default by setting the flex basis to 50%.
+
+```
+flex: 1 50%;
+```
+
+On screens larger than small devices, we keep the items to `flex: 1 auto` which will make the row occupy the whole available space.
+
+_Bootstrap nav is by default `display:flex`, therefore we do not need to specify it._
+_Also remember also to add the webkit and ms compatibility properties._
+
+And we are done, we have created a responsive navbar with a 2x2 grid layout on small screens!
+
+![preview](https://raw.githubusercontent.com/Kimserey/BlogArchive/master/img/20170329_flexbox/flexbox.gif)
+
+# Conclusion
+
+Today we saw how to leverage flexboxes to create a 2x2 grid for a nav menu. Flexboxes allows us to layout elements in a easy and lightweight way. We also saw how to leverage Bootstrap mixins in SASS and use the media query mixin to handle responsive layout in the same manner as Bootstrap. Lastely we put everything together in a navbar example. Hope you liked this post! If you have any questions, leave it here or hit me on Twitter [@Kimserey_Lam](https://twitter.com/Kimserey_Lam). See you next time!
+
+# Other post you will like
+
+-
