--- a/20170329_flexbox.md
+++ b/20170329_flexbox.md
@@ -6,6 +6,8 @@ Last week we saw how to setup vscode to compile sass. Today we will see how we c
  2. Bootstrap sass media directive
  3. Build the nav style
 
+ We will be creating the style for the following navbar:
+
  ![preview](https://raw.githubusercontent.com/Kimserey/BlogArchive/master/img/20170329_flexbox/flexbox.gif)
 
 ## 1. Flexbox
@@ -170,4 +172,7 @@ Today we saw how to leverage flexboxes to create a 2x2 grid for a nav menu. Flex
 
 # Other post you will like
 
--
+- How to make a sticky navbar with Bootstrap v4 - [https://kimsereyblog.blogspot.sg/2017/03/how-to-make-sticky-navbar-using.html](https://kimsereyblog.blogspot.sg/2017/03/how-to-make-sticky-navbar-using.html)
+- Setup code to work with SASS effortlessly - [https://kimsereyblog.blogspot.sg/2017/03/setup-vscode-to-work-with-sass.html](https://kimsereyblog.blogspot.sg/2017/03/setup-vscode-to-work-with-sass.html)
+- Post form data to webserver from HTML or JS - [https://kimsereyblog.blogspot.sg/2017/02/post-form-data-to-server.html](https://kimsereyblog.blogspot.sg/2017/02/post-form-data-to-server.html)
+- Get your own domain name and setup SSL with Cloudfare - [https://kimsereyblog.blogspot.sg/2016/08/get-your-domain-name-and-setup-ssl-with.html](https://kimsereyblog.blogspot.sg/2016/08/get-your-domain-name-and-setup-ssl-with.html)
