--- a/20170401_x.md
+++ b/20170401_x.md
@@ -1,1 +1,1 @@
-# First steps into DotNet core and ASP.NET Core Web api with vscode
+# First steps into DotNet Core and ASP.NET Core Web api with vscode
