--- a/20170519_razor.md
+++ b/20170519_razor.md
@@ -1,15 +1,20 @@
-Razor
+# Razor syntax and helpers
 
 Razor is a html template which allows us to construct pieces of html components by combining data and html markup. The power of Razor reside in its typesafety. It allows us to directly use our C# models in the templates and call functions we had defined in our controllers. Together with intellisense, it is quick way to build simple UI.
-Today we will explore some of the features from Razor 
+Today we will explore some of the features from Razor:
 
-1. Syntax
-2. Templates
-3. Tag helpers
+```
+ 1. Syntax
+ 2. Templates
+ 3. Tag helpers
+```
 
-1. Syntax
+## 1. Syntax
 
-Implicit 
+Razor expressions can written in two ways, implicit or explicit notation.
+
+For implicit notation, we start with `@` and then we directly have access to values either from the view itself or some we created in the view or static functions.
+
 @Hello
 @await DoSomething()
 
@@ -52,6 +57,8 @@ Layout is a property of the view which sets the layout to be used.
 To use partial views, we can use the Html property of the view which we access using @Html, and for partial we invoke the Partial function of Html @Html.Partial("view", model).
 Here we specified the name as "view" which specify to Razor to search the view in current folder or shared folder.
 If we would have specified "view.cshtml" it would have only searched in the current folder.
+
+For example the following code:
 
 Another property used is @Model which gives access to the model linked to the page. To set the type of the model we can use the special keyword @model.
 
