--- a/20170519_razor.md
+++ b/20170519_razor.md
@@ -15,17 +15,26 @@ Razor expressions can written in two ways, implicit or explicit notation.
 
 For implicit notation, we start with `@` and then we directly have access to values either from the view itself or some we created in the view or static functions.
 
-@Hello
-@await DoSomething()
-
-Explicit
-@(hello)
-
-Code block
-@{
-Var h = hey;
+```
+@{ 
+    var a = 10;
 }
-<p>@h</p>
+
+<label>@a</label>
+```
+
+The explicit notation is used with parentheses. It is usefull for simple manipulation:
+
+```
+@{
+    var a = 10;
+    var b = 15;
+}
+
+<p>Total: @(a + b)</p>
+```
+
+In the previous two sample we also saw that code blocks can be placed directly into the views using `@{ ... }`.
 
 Implicit code block transition
 Write html tag within code block
